--- a/payement.html
+++ b/payement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accès Premium • 5 000 FCFA</title>
+    <title>Accès Premium • 5 00FCFA</title>
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
         body {
@@ -99,7 +99,7 @@
             }
 
             // Message EXACTEMENT comme tu le veux
-            const message = `Bonjour !\n\nJe viens de payer 5 000 FCFA via Wave pour l'accès Premium.\n\nNOM : \( {nom}\nPRÉNOM : \){prenom}\nCONTACT : ${contact}\n\nMerci de m'envoyer mon code d'accès rapidement !`;
+            const message = `Bonjour !\n\nJe viens de payer 5 00 FCFA via Wave pour l'accès Premium.\n\nNOM : ${nom}\nPRÉNOM : ${prenom}\nCONTACT : ${contact}\n\nMerci de m'envoyer mon code d'accès rapidement !`;
 
             const url = "https://wa.me/22500503588336?text=" + encodeURIComponent(message);
             window.open(url, "_blank");
@@ -127,7 +127,7 @@
 
     <div class="card">
         <h1>Accès Premium</h1>
-        <div class="prix">5 000 FCFA</div>
+        <div class="prix">5 00 FCFA</div>
 
         <input type="text" id="nom" placeholder="Votre NOM">
         <input type="text" id="prenom" placeholder="Votre PRÉNOM">
@@ -135,8 +135,8 @@
 
         <div class="btn-group">
             <a href="https://pay.wave.com/m/M_ci_tEommx3CEV8p/c/ci/?amount=5" target="_blank" class="btn btn-wave">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Wave_Mobile_Money_Logo.png" alt="Wave">
-                Payer avec Wave
+                
+                💵📎 Wave
             </a>
             <a href="javascript:envoyerWhatsApp()" class="btn btn-whatsapp">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
