--- a/payement.html
+++ b/payement.html
@@ -156,6 +156,7 @@
             2. Cliquez sur « Envoyer sur WhatsApp » → je reçois tout<br>
             3. Payez via Wave<br>
             4. Je vous envoie votre code → entrez-le ici → accès immédiat !
+       <a href="index.html">Retour à l'accueil</a> 
         </div>
     </div>
 
