--- a/payement.html
+++ b/payement.html
@@ -146,7 +146,7 @@
 
         <div class="code-section">
             <h3>Entrez votre code d'accès</h3>
-            <input type="text" id="codeInput" placeholder="EX: MG20200" maxlength="7">
+            <input type="text" id="codeInput" placeholder="📄📎🔒" maxlength="7">
             <button onclick="verifierCode()" class="btn-acceder">Accéder au Premium</button>
         </div>
 
