--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
   <!-- BARRE FIXE EN BAS -->
   <nav class="bottom-nav">
     <a href="index.html" class="active">ACCUEIL</a>
-    <a href="rech.html">RECHERCHE</a>
+    <a href="rech.html">FICHIERS</a>
     <a href="bt.html">PRO</a>
     <a href="gd.html">GUIDE</a>
   </nav>
